src/test/deca/context/invalid/extension/literal_array_empty.deca
// Array Literal can not be empty
// Description : Test with an array literal which is empty
// Error line 6

{
    int[] x = {};
}